更改admin颜色为白色

--- a/ruoyi-admin/src/main/resources/static/css/style.css
+++ b/ruoyi-admin/src/main/resources/static/css/style.css
@@ -3011,7 +3011,7 @@ a.forum-item-title:hover {
 body {
     font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
-    color: #002a38;
+    color: #fff;
     overflow-x: hidden;
 }
 
