--- a/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -117,7 +117,8 @@
 		        },
 		        {
 		            field: 'userId',
-		            title: '用户ID'
+		            title: '用户ID',
+					sortable: true
 		        },
 		        {
 		            field: 'loginName',
@@ -126,7 +127,8 @@
 		        },
 		        {
 		            field: 'userName',
-		            title: '用户名称'
+		            title: '用户名称',
+					sortable: true
 		        },
 		        {
 		            field: 'dept.deptName',
@@ -149,6 +151,7 @@
 		            field: 'status',
 		            title: '状态',
 		            align: 'center',
+					sortable: true,
 		            formatter: function(value, row, index) {
 		            	return $.table.selectDictLabel(datas, value);
 		            }
