--- a/ruoyi-admin/src/main/resources/templates/system/role/role.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/role.html
@@ -82,7 +82,8 @@
 		        },
 		        {
 		            field: 'roleId',
-		            title: '角色编号'
+		            title: '角色编号',
+					sortable: true
 		        },
 		        {
 		            field: 'roleName',
@@ -103,6 +104,7 @@
 		            field: 'status',
 		            title: '状态',
 		            align: 'center',
+					sortable: true,
 		            formatter: function(value, row, index) {
 		            	return $.table.selectDictLabel(datas, value);
 		            }
