--- a/ruoyi-admin/src/main/resources/templates/system/user/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/add.html
@@ -10,43 +10,43 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">登录名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" id="loginName" name="loginName"/>
+					<input class="form-control" placeholder="请输入登录名称" type="text" id="loginName" name="loginName"/>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">部门名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName">
+					<input class="form-control" placeholder="请选择部门名称" type="text" name="deptName" onclick="selectDeptTree()" readonly="true" id="treeName">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">用户名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="userName" id="userName">
+					<input class="form-control" placeholder="请输入用户名称" type="text" name="userName" id="userName">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}">
+					<input class="form-control" placeholder="请输入密码" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">邮箱：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="email" id="email">
+					<input class="form-control" placeholder="请输入邮箱" type="text" name="email" id="email">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">手机：</label>
+				<label class="col-sm-3 control-label">手机号码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phonenumber" id="phonenumber">
+					<input class="form-control" placeholder="请输入手机号码" type="text" name="phonenumber" id="phonenumber">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">手机IMEI：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phoneimei" id="phoneimei">
+					<input class="form-control" placeholder="请输入手机IMEI(选填)" type="text" name="phoneimei" id="phoneimei">
 				</div>
 			</div>
 			<div class="form-group">
@@ -100,7 +100,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">区域名称：</label>
                 <div class="col-sm-8">
-                    <input class="form-control" type="text" name="aidName" onclick="selectAidTree()" readonly="true" id="aidName">
+                    <input class="form-control" placeholder="请选择区域名称" type="text" name="aidName" onclick="selectAidTree()" readonly="true" id="aidName">
                 </div>
             </div>
 		</form>
@@ -296,6 +296,13 @@
             }*!/
             alert("aaa");
         }*/
+
+		$(function() {
+			$('#post').select2({
+				placeholder: "请选择你的岗位",
+				allowClear: true
+			});
+		})
     </script>
 </body>
 </html>
