--- a/ruoyi-admin/src/main/resources/templates/system/role/role.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/role.html
@@ -82,8 +82,7 @@
 		        },
 		        {
 		            field: 'roleId',
-		            title: '角色编号',
-					sortable: true
+		            title: '角色编号'
 		        },
 		        {
 		            field: 'roleName',
@@ -104,7 +103,6 @@
 		            field: 'status',
 		            title: '状态',
 		            align: 'center',
-					sortable: true,
 		            formatter: function(value, row, index) {
 		            	return $.table.selectDictLabel(datas, value);
 		            }
