角色管理界面，角色编号、状态，排序<许嘉成>

--- a/ruoyi-admin/src/main/resources/templates/system/role/role.html
+++ b/ruoyi-admin/src/main/resources/templates/system/role/role.html
@@ -82,7 +82,8 @@
 		        },
 		        {
 		            field: 'roleId',
-		            title: '角色编号'
+		            title: '角色编号',
+                    sortable: true
 		        },
 		        {
 		            field: 'roleName',
@@ -115,6 +116,7 @@
 		        {
 		            title: '操作',
 		            align: 'center',
+                    sortable: true,
 		            formatter: function(value, row, index) {
 		                var actions = [];
 		                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.roleId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
