--- a/ruoyi-admin/src/main/resources/templates/system/user/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/edit.html
@@ -10,7 +10,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">登录名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" readonly="true" th:field="*{loginName}"/>
+					<input name="userName" placeholder="请输入登录名称" class="form-control" type="text" maxlength="30" th:field="*{loginName}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -22,25 +22,25 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">用户名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="userName" id="userName" th:field="*{userName}">
+					<input class="form-control" placeholder="请输入用户名称" type="text" name="userName" id="userName" th:field="*{userName}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">邮箱：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="email" id="email" th:field="*{email}">
+					<input class="form-control" placeholder="请输入邮箱" type="text" name="email" id="email" th:field="*{email}">
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="col-sm-3 control-label">手机：</label>
+				<label class="col-sm-3 control-label">手机号码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phonenumber" id="phonenumber" th:field="*{phonenumber}">
+					<input class="form-control" placeholder="请输入手机号码" type="text" name="phonenumber" id="phonenumber" th:field="*{phonenumber}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">手机IMEI：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="phoneimei" id="phoneimei" th:field="*{phoneimei}">
+					<input class="form-control" placeholder="请输入手机IMEI(选填)" type="text" name="phoneimei" id="phoneimei" th:field="*{phoneimei}">
 				</div>
 			</div>
 			<div class="form-group">
@@ -212,6 +212,13 @@
     			layer.close(index);
 			}
 		}
+
+		$(function() {
+			$('#post').select2({
+				placeholder: "请选择岗位",
+				allowClear: true
+			});
+		})
     </script>
 </body>
 </html>
