--- a/ruoyi-admin/src/main/resources/templates/system/user/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/add.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <meta charset="utf-8">
-<head th:include="include :: header"></head>
+<head th:include="include :: header">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+</head>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-user-add">
@@ -293,6 +295,19 @@
 				allowClear: true
 			});
 		})
+
+        var eye = document.getElementById("eye");
+        var pwd = document.getElementById("password");
+        function showhide(){
+
+            if (pwd.type == "password") {
+                pwd.type = "text";
+                eye.className='fa fa-eye-slash'
+            }else {
+                pwd.type = "password";
+                eye.className='fa fa-eye'
+            }
+        }
     </script>
 </body>
 </html>
