--- a/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
@@ -17,7 +17,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">输入密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
+					<input class="form-control" placeholder="请输入密码" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
 					<i class="fa fa-eye" onclick="showhide()" id="eye"></i>
 				</div>
 			</div>
