--- a/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/resetPwd.html
@@ -7,7 +7,12 @@
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-user-resetPwd">
-			<input name="userId"  type="hidden"  th:value="${user.userId}" />
+            <div class="form-group">
+                <label class="col-sm-3 control-label ">用户编号：</label>
+                <div class="col-sm-8">
+                    <input class="form-control" type="text" readonly="true" name="userId" th:value="${user.userId}"/>
+                </div>
+            </div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">登录名称：</label>
 				<div class="col-sm-8">
