--- a/ruoyi-admin/src/main/resources/templates/system/dept/dept.html
+++ b/ruoyi-admin/src/main/resources/templates/system/dept/dept.html
@@ -32,10 +32,10 @@
 			<a class="btn btn-success" onclick="$.operate.add(100)" shiro:hasPermission="system:dept:add">
 				<i class="fa fa-plus"></i> 新增
 			</a>
-			<a class="btn btn-primary" onclick="$.operate.edit()" shiro:hasPermission="system:dept:edit">
-				<i class="fa fa-edit"></i> 修改
-			</a>
-			<a class="btn btn-info" id="expandAllBtn">
+
+			<a class="btn bt<a class="btn btn-primary" onclick="$.operate.edit()" shiro:hasPermission="system:dept:edit">
+			<i class="fa fa-edit"></i> 修改
+			</a>n-info" id="expandAllBtn">
 				<i class="fa fa-exchange"></i> 展开/折叠
 			</a>
 		</div>
