--- a/ruoyi-admin/src/main/resources/templates/system/user/user.html
+++ b/ruoyi-admin/src/main/resources/templates/system/user/user.html
@@ -76,6 +76,9 @@
 	            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="system:user:export">
 		            <i class="fa fa-download"></i> 导出
 		        </a>
+				<a class="btn btn-warning" onclick="importExcel()" shiro:hasPermission="system:user:export">
+					<i class="fa fa-upload"></i> 导入
+				</a>
 	        </div>
 	        
 	        <div class="col-sm-12 select-table table-striped">
@@ -107,6 +110,7 @@
 		        updateUrl: prefix + "/edit/{id}",
 		        removeUrl: prefix + "/remove",
 		        exportUrl: prefix + "/export",
+				importUrl: prefix + "/importData",
 		        sortName: "createTime",
 		        sortOrder: "desc",
 		        modalName: "用户",
@@ -216,6 +220,115 @@
 		function resetPwd(userId) {
 		    var url = prefix + '/resetPwd/' + userId;
 		    $.modal.open("重置密码", url, '800', '300');
+		}
+	</script>
+	<script id="importTpl" type="text/template">
+		<form enctype="multipart/form-data" class="mt20 mb10">
+			<div class="col-xs-offset-1">
+				<input type="file" id="file" name="file"/>
+				<!--<input type="checkbox" id="updateSupport" name="updateSupport" title="如果登录账户已经存在，更新这条数据。"> 是否更新已经存在的用户数据
+                 &nbsp;	-->
+				<a onclick="importTemplate()" class="btn btn-default btn-xs"><i class="fa fa-file-excel-o"></i> 点击下载excel模板</a>
+				<font color="red" class="pull-left mt10">
+					提示：仅允许导入“xls”或“xlsx”格式文件！
+				</font>
+			</div>
+		</form>
+	</script>
+	<script>
+		// 导入数据
+		function importExcel(formId){
+			var currentId = $.common.isEmpty(formId) ? 'importTpl' : formId;
+			layer.open({
+				type: 1,
+				area: ['400px', '230px'],
+				fix: false,
+				//不固定
+				maxmin: true,
+				shade: 0.3,
+				title: '导入' + $.table._option.modalName + '数据',
+				content: $('#' + currentId).html(),
+				btn: ['<i class="fa fa-check"></i> 导入', '<i class="fa fa-remove"></i> 取消'],
+				// 弹层外区域关闭
+				shadeClose: true,
+				btn1: function(index, layero){
+					var file = layero.find('#file').val();
+					if (file == '' || (!$.common.endWith(file, '.xls') && !$.common.endWith(file, '.xlsx'))){
+						$.modal.msgWarning("请选择后缀为 “xls”或“xlsx”的文件。");
+						return false;
+					}
+					var index = layer.load(2, {shade: false});
+					//$.modal.disable();
+					// 禁用按钮
+					function disable() {
+						var doc = window.top == window.parent ? window.document : window.parent.document;
+						$("a[class*=layui-layer-btn]", doc).addClass("layer-disabled");
+					};
+					var formData = new FormData();
+					formData.append("file", $('#file')[0].files[0]);
+					formData.append("updateSupport", $("input[name='updateSupport']").is(':checked'));
+					$.ajax({
+						url: $.table._option.importUrl,
+						data: formData,
+						cache: false,
+						contentType: false,
+						processData: false,
+						type: 'POST',
+						success: function (result) {
+							if (result.code == web_status.SUCCESS) {
+								// 关闭全部窗体
+								layer.closeAll();
+								// 成功提示
+								function alertSuccess(content) {
+									// 弹出提示
+									layer.alert(content, {
+										icon: $.modal.icon("success"),
+										title: "系统提示",
+										btn: ['确认'],
+										btnclass: ['btn btn-primary'],
+									});
+								}
+								$.table.refresh();
+							} else if (result.code == web_status.WARNING) {
+								layer.closeAll();
+								// 启用按钮
+								function enable() {
+									var doc = window.top == window.parent ? window.document : window.parent.document;
+									$("a[class*=layui-layer-btn]", doc).removeClass("layer-disabled");
+								}
+								// 成功提示
+								function alertSuccess(content) {
+									// 弹出提示
+									layer.alert(content, {
+										icon: $.modal.icon("success"),
+										title: "系统提示",
+										btn: ['确认'],
+										btnclass: ['btn btn-primary'],
+									});
+								}
+								$.modal.alert("warning");
+							} else {
+								layer.closeAll();
+								function enable() {
+									var doc = window.top == window.parent ? window.document : window.parent.document;
+									$("a[class*=layui-layer-btn]", doc).removeClass("layer-disabled");
+								}
+								// 错误提示
+								function alertError(content) {
+									// 弹出提示
+									layer.alert(content, {
+										icon: $.modal.icon("fail"),
+										title: "系统提示",
+										btn: ['确认'],
+										btnclass: ['btn btn-primary'],
+									});
+								}
+								$.modal.alert("操作失败，插入数据与现有数据重复");
+							}
+						}
+					});
+				}
+			});
 		}
 	</script>
 </body>
